tests/snapshots/validate__a_rule_finding_underlines_the_rule_the_user_wrote.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 1 error
   ,-[[CONFIG]:6:15]
 4 |     target: tag
 5 |     rules:
 6 |       - type: pull_request
   :               ^^^^^^|^^^^^
   :                     `-- branch-only rule
 7 |       - type: creation
   `----
