tests/snapshots/validate__a_variable_inside_an_environment_is_underlined_where_it_was_written.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 1 error
   ,-[[CONFIG]:5:15]
 3 |   - name: staging
 4 |     variables:
 5 |       - name: GITHUB_X
   :               ^^^^|^^^
   :                   `-- reserved prefix
 6 |         value: x
   `----
  help: GitHub reserves `GITHUB_*` for the variables it sets itself
